--- a/genindex.html
+++ b/genindex.html
@@ -137,8 +137,14 @@
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.complete_progress">complete_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.copy">copy() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.copy">copy() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.copy">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.copy">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache">CopyCache (class in copyxnat.xnat.copy_cache)</a>
 </li>
       <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand">CopyCommand (class in copyxnat.commands.copy_command)</a>
@@ -320,9 +326,17 @@
         <li><a href="copyxnat.xnat_backend.server_factory.html#module-copyxnat.xnat_backend.server_factory">module</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor.create">create() (copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor class method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.create">create() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.create">(copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.create">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.create">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor class method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatFile class method)</a>
@@ -368,24 +382,16 @@
       </ul></li>
       <li><a href="versioneer.html#versioneer.do_setup">do_setup() (in module versioneer)</a>
 </li>
-      <li><a href="versioneer.html#versioneer.do_vcs_install">do_vcs_install() (in module versioneer)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="versioneer.html#versioneer.do_vcs_install">do_vcs_install() (in module versioneer)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.download_file">download_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.download_zip_file">download_zip_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.duplicate">duplicate() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
-
-      <ul>
-        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.duplicate">(copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.duplicate">duplicate() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
-        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.duplicate">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
-</li>
-        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.duplicate">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
-</li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -395,6 +401,8 @@
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes.END">END (copyxnat.pyreporter.pyreporter.PyReporterCodes attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.exists">exists() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+</li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.exists_on_server">exists_on_server() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.experiment">experiment (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
@@ -454,11 +462,15 @@
 </li>
       <li><a href="versioneer.html#versioneer.get_config_from_root">get_config_from_root() (in module versioneer)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.get_disallowed_project_ids">get_disallowed_project_ids() (copyxnat.xnat_backend.pyxnat_server.PyXnatProject static method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_disallowed_project_ids">get_disallowed_project_ids() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
+</li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_existing">get_existing() (copyxnat.xnat.xnat_interface.XnatItem class method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_id">get_id() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.get_keywords">get_keywords() (in module copyxnat.utils.versioneer_version)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_label">get_label() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">get_or_create_child() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
@@ -1151,7 +1163,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.0.
     </div>
   </body>
 </html>
