--- a/_modules/copyxnat/pyreporter/pyreporter.html
+++ b/_modules/copyxnat/pyreporter/pyreporter.html
@@ -57,8 +57,7 @@
     <span class="n">_VERBOSE_PREFIX</span> <span class="o">=</span> <span class="s1">&#39;VERBOSE INFO (verbose)&#39;</span>
     <span class="n">_SEPARATOR</span> <span class="o">=</span> <span class="s1">&#39;: &#39;</span>
 
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dry_run</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">dry_run</span> <span class="o">=</span> <span class="n">dry_run</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">verbose</span> <span class="o">=</span> <span class="n">verbose</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_handlers</span> <span class="o">=</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">_print_handler</span><span class="p">]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_iter_num</span> <span class="o">=</span> <span class="kc">None</span>
@@ -199,7 +198,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.0.
     </div>
   </body>
 </html>
