--- a/_modules/copyxnat/xnat/commands.html
+++ b/_modules/copyxnat/xnat/commands.html
@@ -97,11 +97,29 @@
                  <span class="n">fix_scan_types</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                  <span class="n">download_zips</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                  <span class="n">dry_run</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-                 <span class="n">ignore_datatype_errors</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+                 <span class="n">ignore_datatype_errors</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
+                 <span class="n">overwrite_existing</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Create global application settings</span>
+
+<span class="sd">        @param fix_scan_types: If True then ambiguous scan types will be</span>
+<span class="sd">        modified on the destination XNAT server to match the expected scan type</span>
+<span class="sd">        @param download_zips: If True then resources will be uploaded and</span>
+<span class="sd">        downloaded as zip files, which is faster but individual file attributes</span>
+<span class="sd">        will not be set when copying between servers</span>
+<span class="sd">        @param dry_run: set to True to request that write operations are not</span>
+<span class="sd">        made on the destination server, to allow testing. Note that some</span>
+<span class="sd">        changes may still take place</span>
+<span class="sd">        @param ignore_datatype_errors: Set to True to copy files even if the</span>
+<span class="sd">        datatype is not present on the destination server</span>
+<span class="sd">        @param overwrite_existing: Set to True to overwrite existing data on the</span>
+<span class="sd">        XNAT server</span>
+<span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">dry_run</span> <span class="o">=</span> <span class="n">dry_run</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">download_zips</span> <span class="o">=</span> <span class="n">download_zips</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">fix_scan_types</span> <span class="o">=</span> <span class="n">fix_scan_types</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">ignore_datatype_errors</span> <span class="o">=</span> <span class="n">ignore_datatype_errors</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">ignore_datatype_errors</span> <span class="o">=</span> <span class="n">ignore_datatype_errors</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">overwrite_existing</span> <span class="o">=</span> <span class="n">overwrite_existing</span></div>
 
 
 <div class="viewcode-block" id="CommandInputs"><a class="viewcode-back" href="../../../copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandInputs">[docs]</a><span class="k">class</span> <span class="nc">CommandInputs</span><span class="p">:</span>
@@ -152,7 +170,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.3.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.0.
     </div>
   </body>
 </html>
