deploy: afdbcae6e2d92e8bbefc96bd267d671514d42508

--- a/genindex.html
+++ b/genindex.html
@@ -604,6 +604,14 @@
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.message">message() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.metadata_missing">metadata_missing() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.metadata_missing">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.metadata_missing">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.MODALITY_TO_SCAN">MODALITY_TO_SCAN (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.MODIFY_DST_SERVER">MODIFY_DST_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
@@ -722,6 +730,8 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.ohif_generate_session">ohif_generate_session() (copyxnat.xnat.xnat_interface.XnatExperiment method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.ohif_generate_session">(copyxnat.xnat.xnat_interface.XnatFile method)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.ohif_generate_session">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       </ul></li>
@@ -791,6 +801,14 @@
       </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.provide_metadata">provide_metadata() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.provide_metadata">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.provide_metadata">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
