--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -186,6 +186,8 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s2">&quot;Skipping </span><span class="si">{}</span><span class="s2"> </span><span class="si">{}</span><span class="s2"> (already exists on &quot;</span>
                                       <span class="s2">&quot;destination)&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>  <span class="c1"># pylint: disable=no-member</span>
                 <span class="n">write_dst</span> <span class="o">=</span> <span class="kc">False</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">write_dst</span> <span class="o">=</span> <span class="kc">True</span>
 
         <span class="k">if</span> <span class="n">write_dst</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">create</span><span class="p">(</span><span class="n">dst_item</span><span class="o">=</span><span class="n">copied_item</span><span class="p">)</span>
